<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HealthCare</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_create_profile">CreateProfileActivity</string>
    <string name="title_activity_view_profile">ViewProfileActivity</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="hospitalId">Hospital ID</string>
    <string name="hospitalName">Hospital Name</string>
    <string name="hospitalAddress">Hospital Address</string>
    <string name="latitude">Latitude</string>
    <string name="longtitude">Longtitude</string>
    <string name="availablrDoctorName">Available Doctor Name</string>
    <string name="availableDoctorNumber">Available Doctor Number</string>
    <string name="hospitalDescription">Hospital Description</string>
    <string name="save">Save</string>
    <string name="view_Profile">View Profile</string>
    <string name="add">Add New Profile</string>
    
    <string name="Create_Profile">Create Profile</string>
    
     <string name="preview">Preview</string>
     <string name="takePic">Take a Picture</string>
    

</resources>
