<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
      android:id="@+id/scrollView"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:background="@drawable/backgroung">

<LinearLayout
    android:layout_width="314dp"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center" 
        android:layout_margin="10dp"
        android:background="#CEF6F5">
    
    <ImageView
        android:id="@+id/imageViewCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"        
        android:layout_marginRight="14dp"        
        android:contentDescription="@drawable/my"
        android:src="@drawable/my" />

        
    <TextView
        android:id="@+id/textCreateProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_blue_dark"
        android:text="@string/view_Profile"        
        android:textSize="20sp" />
    
    
</LinearLayout>

    <ScrollView 
      android:id="@+id/scrollViewN"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:background="#A9E2F3"
      android:layout_margin="10dp"
      android:layout_gravity="center" >
      
    <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/viewHospitalId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"/>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

    
    <TextView
        android:id="@+id/viewHospitalName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp"
        android:layout_gravity="start"
        android:textColor="@android:color/holo_blue_dark"
        android:text="@string/hospitalName"
        android:drawableLeft="@drawable/hospialname"/>
    
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

    
    <TextView
        android:id="@+id/viewHospitalAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp"
        android:layout_gravity="start"
        android:textColor="@android:color/holo_blue_dark"
        android:text="@string/hospitalAddress"
        android:drawableLeft="@drawable/hospitaladdress"/>  
     
    </LinearLayout>

    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

    
    <TextView
        android:id="@+id/viewLatitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp"
        android:layout_gravity="start"
        android:textColor="@android:color/holo_blue_dark"
        android:text="@string/latitude"
        android:drawableLeft="@drawable/userlocaton"/>
    
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

    
    <TextView
        android:id="@+id/viewLongitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp"
        android:layout_gravity="start"
        android:textColor="@android:color/holo_blue_dark"
        android:text="@string/longtitude"
        android:drawableLeft="@drawable/longtitude"/>
    
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

    
    <TextView
        android:id="@+id/viewAvailableDoctorName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp"
        android:layout_gravity="start"
        android:textColor="@android:color/holo_blue_dark"
        android:text="@string/availablrDoctorName"
        android:drawableLeft="@drawable/doctor"/>
    
    </LinearLayout>
    
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

    
    <TextView
        android:id="@+id/viewAvailableDoctorNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp"
        android:layout_gravity="start"
        android:textColor="@android:color/holo_blue_dark"
        android:text="@string/availableDoctorNumber"
        android:drawableLeft="@drawable/icon_phone"/>
    
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

    
    <TextView
        android:id="@+id/viewHospitalDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp"
        android:layout_gravity="start"
        android:textColor="@android:color/holo_blue_dark"
        android:text="@string/hospitalDescription"
        android:drawableLeft="@drawable/description"/>
    
    </LinearLayout>
    
    </LinearLayout>
    
    </ScrollView>
    

</LinearLayout>
</ScrollView>