<?xml version="1.0" encoding="utf-8"?>
<!-- <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
      android:id="@+id/scrollView"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:background="@drawable/backgroung"> -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/backgroung" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center" 
        android:layout_margin="10dp"
        android:background="#CEF6F5">
    
    <ImageView
        android:id="@+id/imageViewCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"        
        android:layout_marginRight="14dp"        
        android:contentDescription="@drawable/create"
        android:src="@drawable/create" />

        
    <TextView
        android:id="@+id/textCreateProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_blue_dark"
        android:text="@string/Create_Profile"        
        android:textSize="20sp" />
    
    
</LinearLayout>

    <ScrollView 
      android:id="@+id/scrollViewN"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:background="#A9E2F3"
      android:layout_margin="10dp"
      android:layout_gravity="center" >
      
    <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imageHospitalId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@drawable/id"
            android:src="@drawable/id" />

	    <EditText
	        android:id="@+id/createHospitalId"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="0.54"
	        android:layout_marginLeft="5dp"
	        android:ems="10"
	        android:hint="@string/hospitalId" />

	 </LinearLayout>
	 
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imageHospitalName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@drawable/hospialname"
            android:src="@drawable/hospialname" />

	    <EditText
	        android:id="@+id/createHospitalName"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="0.40"
	        android:layout_marginLeft="5dp"
	        android:ems="10"
	        android:hint="@string/hospitalName" />

	 </LinearLayout>
	 
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imageHospitalAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@drawable/address"
            android:src="@drawable/address" />

	    <EditText
	        android:id="@+id/createHospitalAddress"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="0.54"
	        android:layout_marginLeft="5dp"
	        android:ems="10"
	        android:hint="@string/hospitalAddress" />

	 </LinearLayout>
    
    
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
 
	    <ImageView
	        android:id="@+id/imageLatitude"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"	        
	        android:contentDescription="@drawable/userlocaton"
	        android:src="@drawable/userlocaton" />


	    <EditText
	        android:id="@+id/createLatitude"
	        android:layout_width="0dp"
	    	android:layout_weight="0.65"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:layout_marginLeft="5dp"
	        android:hint="@string/latitude" />
	 </LinearLayout>
	 
      
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
	    	    
	    <ImageView
        android:id="@+id/imageLongitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"       
        android:contentDescription="@drawable/longtitude"
        android:src="@drawable/longtitude" />


	    <EditText
	        android:id="@+id/createLongitude"
	        android:layout_width="0dp"
	    	android:layout_weight="0.65"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:layout_marginLeft="5dp"
	        android:hint="@string/longtitude" />
	 </LinearLayout>
	 
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imageAvailableDoctorName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@drawable/doctor"
            android:src="@drawable/doctor" />

	    <EditText
	        android:id="@+id/createAvailableDoctorName"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="0.54"
	        android:layout_marginLeft="5dp"
	        android:ems="10"
	        android:hint="@string/availablrDoctorName" />

	 </LinearLayout>   
     
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
	    	    
	    <ImageView
	        android:id="@+id/imageAvailableDoctoNumber"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"	        
	        android:contentDescription="@drawable/icon_phone"
	        android:src="@drawable/icon_phone" />


	    <EditText
	        android:id="@+id/createAvailableDoctoNumber"
	        android:inputType="numberSigned"
	        android:layout_width="0dp"
	    	android:layout_weight="0.65"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:layout_marginLeft="5dp"
	        android:hint="@string/availableDoctorNumber" />
	 </LinearLayout>
	 
                     
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
	    	    
	    <ImageView
	        android:id="@+id/imageHospitalDescription"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"	        
	        android:contentDescription="@drawable/description"
	        android:src="@drawable/description" />

	    <EditText
	        android:id="@+id/createHospitalDescription"
	        android:inputType="text"
	        android:layout_width="0dp"
	    	android:layout_weight="0.65"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:layout_marginLeft="5dp"
	        android:hint="@string/hospitalDescription" />
	 </LinearLayout>
	 
   
    </LinearLayout>
    
     </ScrollView>
    
     
 <Button
     android:id="@+id/Save"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:ems="5"
     android:text="@string/save"
     android:drawableLeft="@drawable/save"    
     android:layout_gravity="center"    
     android:layout_marginTop="5dp"
     android:layout_marginBottom="20dp"
     android:background="@drawable/rounded_blue"
     android:textColor="@android:color/holo_blue_dark"/>
 

 
   <!-- <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

Capture picture button
        <Button
            android:id="@+id/btnCapturePicture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/takePic"
            android:layout_marginBottom="10dp"/>
 

    </LinearLayout>
 
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/preview"
            android:padding="10dp"
            android:textSize="15sp"/>
 
        To display picture taken
        <ImageView
            android:id="@+id/imgPreview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/hello_world"
            android:visibility="gone" />
 

    </LinearLayout>
 --> 

 
   </LinearLayout>
 
<!-- </ScrollView>
 -->   




